# ws

./: .env  Cargo.toml
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  mod.rs  models.rs  routers.rs
webapp/static/: register.html  teachers.html
webapp/static/css/: register.css
webservice/: Cargo.toml  course.sql  teacher.sql
webservice/src/: db_access.rs  errors.rs  handler.rs  models.rs  routers.rs  state.rs
webservice/src/db_access/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
